--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Workflow Creator</h1>
         <form id="workflowForm">
             <div class="form-group">
-                <label for="purpose">Purpose <span style="color:red">*</span></label>
-                <div class="textarea-wrapper">
-                    <textarea id="purpose" name="purpose" rows="4" placeholder="What is the main purpose of the automation? Example: I want an automation that summarizes and categorizes all emails I've received this week. I want the summary emailed to my kiwi email." required></textarea>
-                </div>
+                <label for="purpose">Purpose</label>
+                <textarea id="purpose" name="purpose" rows="4" placeholder="What is the main purpose of the automation? Example: I want an automation that summarizes and categorizes all emails I've received this week. I want the summary emailed to my kiwi email." required></textarea>
                 <span class="error-message" id="purposeError"></span>
             </div>
 
@@ -78,15 +75,8 @@
             <!-- You can add a spinner or animation here -->
         </div>
 
-        <!-- Success Modal -->
-        <div id="successModal" class="modal-overlay" style="display: none;">
-            <div class="success-modal-content">
-                <span class="close-button">&times;</span>
-                <div id="confettiCanvas" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 2050; pointer-events: none;"></div>
-                <h2>Your n8n workflow is being created!</h2>
-                <p>This will take approximately 5-10 minutes. You'll receive updates via Slack with further details.</p>
-                <button id="modalCreateAnotherWorkflowBtn" class="submit-btn">Create Another n8n Workflow</button>
-            </div>
+        <div id="responseMessage" class="response-message" style="display: none;">
+            <!-- Success or error messages will be displayed here -->
         </div>
         <!-- End Success Modal -->
 
